// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > (Snapshot) renders correctly 1`] = `
<DocumentFragment>
  <div
    class="flex max-h-full w-full flex-col gap-2"
  >
    <div
      aria-orientation="horizontal"
      class="flex w-full flex-wrap items-center gap-2"
      id="tabs-:r0:-list"
      role="tablist"
    >
      <button
        aria-controls="headlessui-tabs-panel-:r7:"
        aria-selected="true"
        class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-primary-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none h-8 px-2 text-sm"
        data-headlessui-state=""
        data-selected=""
        id="headlessui-tabs-tab-:r1:"
        role="tab"
        tabindex="0"
        type="button"
      >
        <span
          class="inline-flex items-center gap-1.5"
        >
          Artists
        </span>
      </button>
      <button
        aria-controls="headlessui-tabs-panel-:r9:"
        aria-selected="false"
        class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-foreground bg-transparent hover:bg-black/5 active:bg-black/10 h-8 px-2 text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r3:"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span
          class="inline-flex items-center gap-1.5"
        >
          Tracks
        </span>
      </button>
      <button
        aria-controls="headlessui-tabs-panel-:rb:"
        aria-selected="false"
        class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-foreground bg-transparent hover:bg-black/5 active:bg-black/10 h-8 px-2 text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r5:"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span
          class="inline-flex items-center gap-1.5"
        >
          About
        </span>
      </button>
    </div>
    <div
      class="mt-2 flex flex-1 flex-col overflow-hidden"
      id="tabs-:r0:-panels"
    >
      <div
        aria-labelledby="headlessui-tabs-tab-:r1:"
        class="relative flex-1 overflow-hidden outline-none"
        data-headlessui-state="selected"
        data-selected=""
        id="headlessui-tabs-panel-:r7:"
        role="tabpanel"
        tabindex="0"
      >
        <div
          animate="[object Object]"
          class="h-full"
          transition="[object Object]"
        >
          <div
            class="relative h-full w-full"
          >
            <div
              class="scrollbar-hide flex h-full w-full flex-col overflow-auto"
              style="scrollbar-width: none;"
            >
              <div
                class="text-foreground"
              >
                <div
                  class="grid grid-cols-[repeat(auto-fit,minmax(10rem,1fr))] gap-4 pr-2 pb-4"
                  role="grid"
                >
                  <div
                    class="text-primary-foreground bg-primary border-border shadow-shadow flex w-46 flex-col items-stretch gap-2 rounded-md border-(length:--border-width) p-2 text-left transition-all"
                    data-testid="card"
                  >
                    <div
                      class="border-border flex h-full rounded-md border-(length:--border-width) bg-primary text-primary-foreground shadow-none relative aspect-square w-full items-center justify-center overflow-hidden p-0"
                    >
                      <div
                        class="group overflow-hidden absolute inset-0 size-full"
                        data-testid="media-artwork"
                      >
                        <div
                          class="overflow-hidden absolute inset-0"
                        >
                          <img
                            alt="Frank Zappa"
                            class="h-full w-full object-cover"
                            decoding="async"
                            loading="lazy"
                            src="https://picsum.photos/seed/Frank Zappa/300"
                          />
                          <div
                            class="pointer-events-none absolute inset-0 flex items-center justify-center"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-cassette-tape opacity-20"
                              fill="none"
                              height="96"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="0.5"
                              viewBox="0 0 24 24"
                              width="96"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <rect
                                height="16"
                                rx="2"
                                width="20"
                                x="2"
                                y="4"
                              />
                              <circle
                                cx="8"
                                cy="10"
                                r="2"
                              />
                              <path
                                d="M8 12h8"
                              />
                              <circle
                                cx="16"
                                cy="10"
                                r="2"
                              />
                              <path
                                d="m6 20 .7-2.9A1.4 1.4 0 0 1 8.1 16h7.8a1.4 1.4 0 0 1 1.4 1l.7 3"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="min-w-0"
                    >
                      <div
                        class="text-primary-foreground truncate text-sm font-bold"
                        data-testid="card-title"
                      >
                        Frank Zappa
                      </div>
                    </div>
                  </div>
                  <div
                    class="text-primary-foreground bg-primary border-border shadow-shadow flex w-46 flex-col items-stretch gap-2 rounded-md border-(length:--border-width) p-2 text-left transition-all"
                    data-testid="card"
                  >
                    <div
                      class="border-border flex h-full rounded-md border-(length:--border-width) bg-primary text-primary-foreground shadow-none relative aspect-square w-full items-center justify-center overflow-hidden p-0"
                    >
                      <div
                        class="group overflow-hidden absolute inset-0 size-full"
                        data-testid="media-artwork"
                      >
                        <div
                          class="overflow-hidden absolute inset-0"
                        >
                          <img
                            alt="Ozzy Osbourne"
                            class="h-full w-full object-cover"
                            decoding="async"
                            loading="lazy"
                            src="https://picsum.photos/seed/Ozzy Osbourne/300"
                          />
                          <div
                            class="pointer-events-none absolute inset-0 flex items-center justify-center"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-cassette-tape opacity-20"
                              fill="none"
                              height="96"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="0.5"
                              viewBox="0 0 24 24"
                              width="96"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <rect
                                height="16"
                                rx="2"
                                width="20"
                                x="2"
                                y="4"
                              />
                              <circle
                                cx="8"
                                cy="10"
                                r="2"
                              />
                              <path
                                d="M8 12h8"
                              />
                              <circle
                                cx="16"
                                cy="10"
                                r="2"
                              />
                              <path
                                d="m6 20 .7-2.9A1.4 1.4 0 0 1 8.1 16h7.8a1.4 1.4 0 0 1 1.4 1l.7 3"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="min-w-0"
                    >
                      <div
                        class="text-primary-foreground truncate text-sm font-bold"
                        data-testid="card-title"
                      >
                        Ozzy Osbourne
                      </div>
                    </div>
                  </div>
                  <div
                    class="text-primary-foreground bg-primary border-border shadow-shadow flex w-46 flex-col items-stretch gap-2 rounded-md border-(length:--border-width) p-2 text-left transition-all"
                    data-testid="card"
                  >
                    <div
                      class="border-border flex h-full rounded-md border-(length:--border-width) bg-primary text-primary-foreground shadow-none relative aspect-square w-full items-center justify-center overflow-hidden p-0"
                    >
                      <div
                        class="group overflow-hidden absolute inset-0 size-full"
                        data-testid="media-artwork"
                      >
                        <div
                          class="overflow-hidden absolute inset-0"
                        >
                          <img
                            alt="David Bowie"
                            class="h-full w-full object-cover"
                            decoding="async"
                            loading="lazy"
                            src="https://picsum.photos/seed/David Bowie/300"
                          />
                          <div
                            class="pointer-events-none absolute inset-0 flex items-center justify-center"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-cassette-tape opacity-20"
                              fill="none"
                              height="96"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="0.5"
                              viewBox="0 0 24 24"
                              width="96"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <rect
                                height="16"
                                rx="2"
                                width="20"
                                x="2"
                                y="4"
                              />
                              <circle
                                cx="8"
                                cy="10"
                                r="2"
                              />
                              <path
                                d="M8 12h8"
                              />
                              <circle
                                cx="16"
                                cy="10"
                                r="2"
                              />
                              <path
                                d="m6 20 .7-2.9A1.4 1.4 0 0 1 8.1 16h7.8a1.4 1.4 0 0 1 1.4 1l.7 3"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="min-w-0"
                    >
                      <div
                        class="text-primary-foreground truncate text-sm font-bold"
                        data-testid="card-title"
                      >
                        David Bowie
                      </div>
                    </div>
                  </div>
                  <div
                    class="text-primary-foreground bg-primary border-border shadow-shadow flex w-46 flex-col items-stretch gap-2 rounded-md border-(length:--border-width) p-2 text-left transition-all"
                    data-testid="card"
                  >
                    <div
                      class="border-border flex h-full rounded-md border-(length:--border-width) bg-primary text-primary-foreground shadow-none relative aspect-square w-full items-center justify-center overflow-hidden p-0"
                    >
                      <div
                        class="group overflow-hidden absolute inset-0 size-full"
                        data-testid="media-artwork"
                      >
                        <div
                          class="overflow-hidden absolute inset-0"
                        >
                          <img
                            alt="Kurt Cobain"
                            class="h-full w-full object-cover"
                            decoding="async"
                            loading="lazy"
                            src="https://picsum.photos/seed/Kurt Cobain/300"
                          />
                          <div
                            class="pointer-events-none absolute inset-0 flex items-center justify-center"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-cassette-tape opacity-20"
                              fill="none"
                              height="96"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="0.5"
                              viewBox="0 0 24 24"
                              width="96"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <rect
                                height="16"
                                rx="2"
                                width="20"
                                x="2"
                                y="4"
                              />
                              <circle
                                cx="8"
                                cy="10"
                                r="2"
                              />
                              <path
                                d="M8 12h8"
                              />
                              <circle
                                cx="16"
                                cy="10"
                                r="2"
                              />
                              <path
                                d="m6 20 .7-2.9A1.4 1.4 0 0 1 8.1 16h7.8a1.4 1.4 0 0 1 1.4 1l.7 3"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="min-w-0"
                    >
                      <div
                        class="text-primary-foreground truncate text-sm font-bold"
                        data-testid="card-title"
                      >
                        Kurt Cobain
                      </div>
                    </div>
                  </div>
                  <div
                    class="text-primary-foreground bg-primary border-border shadow-shadow flex w-46 flex-col items-stretch gap-2 rounded-md border-(length:--border-width) p-2 text-left transition-all"
                    data-testid="card"
                  >
                    <div
                      class="border-border flex h-full rounded-md border-(length:--border-width) bg-primary text-primary-foreground shadow-none relative aspect-square w-full items-center justify-center overflow-hidden p-0"
                    >
                      <div
                        class="group overflow-hidden absolute inset-0 size-full"
                        data-testid="media-artwork"
                      >
                        <div
                          class="overflow-hidden absolute inset-0"
                        >
                          <img
                            alt="John Lennon"
                            class="h-full w-full object-cover"
                            decoding="async"
                            loading="lazy"
                            src="https://picsum.photos/seed/John Lennon/300"
                          />
                          <div
                            class="pointer-events-none absolute inset-0 flex items-center justify-center"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-cassette-tape opacity-20"
                              fill="none"
                              height="96"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="0.5"
                              viewBox="0 0 24 24"
                              width="96"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <rect
                                height="16"
                                rx="2"
                                width="20"
                                x="2"
                                y="4"
                              />
                              <circle
                                cx="8"
                                cy="10"
                                r="2"
                              />
                              <path
                                d="M8 12h8"
                              />
                              <circle
                                cx="16"
                                cy="10"
                                r="2"
                              />
                              <path
                                d="m6 20 .7-2.9A1.4 1.4 0 0 1 8.1 16h7.8a1.4 1.4 0 0 1 1.4 1l.7 3"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="min-w-0"
                    >
                      <div
                        class="text-primary-foreground truncate text-sm font-bold"
                        data-testid="card-title"
                      >
                        John Lennon
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        aria-hidden="true"
        aria-labelledby="headlessui-tabs-tab-:r3:"
        id="headlessui-tabs-panel-:r9:"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
      <span
        aria-hidden="true"
        aria-labelledby="headlessui-tabs-tab-:r5:"
        id="headlessui-tabs-panel-:rb:"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs > (Snapshot) renders icons and count pills 1`] = `
<DocumentFragment>
  <div
    class="flex max-h-full w-full flex-col gap-2"
  >
    <div
      aria-orientation="horizontal"
      class="flex w-full flex-wrap items-center gap-2"
      id="tabs-:rd:-list"
      role="tablist"
    >
      <button
        aria-controls="headlessui-tabs-panel-:ri:"
        aria-selected="true"
        class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-primary-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none h-8 px-2 text-sm"
        data-headlessui-state=""
        data-selected=""
        id="headlessui-tabs-tab-:re:"
        role="tab"
        tabindex="0"
        type="button"
      >
        <span
          class="inline-flex items-center gap-1.5"
        >
          <span
            aria-hidden="true"
            class="shrink-0 [&>svg]:size-3.5"
          >
            <span
              data-testid="artists-icon"
            >
              ★
            </span>
          </span>
          Artists
          <span
            class="border-border inline-flex items-center justify-center border-(length:--border-width) whitespace-nowrap rounded-full py-0.5 font-semibold bg-background text-foreground min-w-4 px-1.5 text-[10px] leading-3"
          >
            5
          </span>
        </span>
      </button>
      <button
        aria-controls="headlessui-tabs-panel-:rk:"
        aria-selected="false"
        class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-foreground bg-transparent hover:bg-black/5 active:bg-black/10 h-8 px-2 text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:rg:"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span
          class="inline-flex items-center gap-1.5"
        >
          Tracks
          <span
            class="border-border inline-flex items-center justify-center border-(length:--border-width) whitespace-nowrap rounded-full py-0.5 font-semibold bg-background text-foreground min-w-4 px-1.5 text-[10px] leading-3"
          >
            12
          </span>
        </span>
      </button>
    </div>
    <div
      class="mt-2 flex flex-1 flex-col overflow-hidden"
      id="tabs-:rd:-panels"
    >
      <div
        aria-labelledby="headlessui-tabs-tab-:re:"
        class="relative flex-1 overflow-hidden outline-none"
        data-headlessui-state="selected"
        data-selected=""
        id="headlessui-tabs-panel-:ri:"
        role="tabpanel"
        tabindex="0"
      >
        <div
          animate="[object Object]"
          class="h-full"
          transition="[object Object]"
        >
          <div
            class="relative h-full w-full"
          >
            <div
              class="scrollbar-hide flex h-full w-full flex-col overflow-auto"
              style="scrollbar-width: none;"
            >
              <div>
                Artists panel
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        aria-hidden="true"
        aria-labelledby="headlessui-tabs-tab-:rg:"
        id="headlessui-tabs-panel-:rk:"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs > (Snapshot) renders in composition mode 1`] = `
<DocumentFragment>
  <div
    class="flex max-h-full w-full flex-col gap-2"
  >
    <div
      aria-orientation="horizontal"
      class="flex w-full flex-wrap items-center gap-2"
      id="tabs-:r13:-list"
      role="tablist"
    >
      <button
        aria-controls="headlessui-tabs-panel-:r18:"
        aria-selected="true"
        class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-primary-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none h-8 px-2 text-sm"
        data-headlessui-state=""
        data-selected=""
        id="headlessui-tabs-tab-:r14:"
        role="tab"
        tabindex="0"
        type="button"
      >
        First
      </button>
      <button
        aria-controls="headlessui-tabs-panel-:r1a:"
        aria-selected="false"
        class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-foreground bg-transparent hover:bg-black/5 active:bg-black/10 h-8 px-2 text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r16:"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Second
      </button>
    </div>
    <div
      class="mt-2 flex flex-1 flex-col overflow-hidden"
      id="tabs-:r13:-panels"
    >
      <div
        aria-labelledby="headlessui-tabs-tab-:r14:"
        class="relative flex-1 overflow-hidden outline-none"
        data-headlessui-state="selected"
        data-selected=""
        id="headlessui-tabs-panel-:r18:"
        role="tabpanel"
        tabindex="0"
      >
        <div
          animate="[object Object]"
          class="h-full"
          transition="[object Object]"
        >
          <div
            class="relative h-full w-full"
          >
            <div
              class="scrollbar-hide flex h-full w-full flex-col overflow-auto"
              style="scrollbar-width: none;"
            >
              <div>
                First panel content
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        aria-hidden="true"
        aria-labelledby="headlessui-tabs-tab-:r16:"
        id="headlessui-tabs-panel-:r1a:"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs > (Snapshot) switches tabs 1`] = `
<DocumentFragment>
  <div
    class="flex max-h-full w-full flex-col gap-2"
  >
    <div
      aria-orientation="horizontal"
      class="flex w-full flex-wrap items-center gap-2"
      id="tabs-:rm:-list"
      role="tablist"
    >
      <button
        aria-controls="headlessui-tabs-panel-:rt:"
        aria-selected="false"
        class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-foreground bg-transparent hover:bg-black/5 active:bg-black/10 h-8 px-2 text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:rn:"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span
          class="inline-flex items-center gap-1.5"
        >
          Artists
        </span>
      </button>
      <button
        aria-controls="headlessui-tabs-panel-:rv:"
        aria-selected="false"
        class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-foreground bg-transparent hover:bg-black/5 active:bg-black/10 h-8 px-2 text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:rp:"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span
          class="inline-flex items-center gap-1.5"
        >
          Tracks
        </span>
      </button>
      <button
        aria-controls="headlessui-tabs-panel-:r11:"
        aria-selected="true"
        class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-primary-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none h-8 px-2 text-sm"
        data-headlessui-state="hover"
        data-hover=""
        data-selected=""
        id="headlessui-tabs-tab-:rr:"
        role="tab"
        tabindex="0"
        type="button"
      >
        <span
          class="inline-flex items-center gap-1.5"
        >
          About
        </span>
      </button>
    </div>
    <div
      class="mt-2 flex flex-1 flex-col overflow-hidden"
      id="tabs-:rm:-panels"
    >
      <span
        aria-hidden="true"
        aria-labelledby="headlessui-tabs-tab-:rn:"
        id="headlessui-tabs-panel-:rt:"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
      <span
        aria-hidden="true"
        aria-labelledby="headlessui-tabs-tab-:rp:"
        id="headlessui-tabs-panel-:rv:"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
      <div
        aria-labelledby="headlessui-tabs-tab-:rr:"
        class="relative flex-1 overflow-hidden outline-none"
        data-headlessui-state="selected"
        data-selected=""
        id="headlessui-tabs-panel-:r11:"
        role="tabpanel"
        tabindex="0"
      >
        <div
          animate="[object Object]"
          class="h-full"
          transition="[object Object]"
        >
          <div
            class="relative h-full w-full"
          >
            <div
              class="scrollbar-hide flex h-full w-full flex-col overflow-auto"
              style="scrollbar-width: none;"
            >
              <div
                class="text-foreground"
              >
                <div
                  class="border-border flex h-full w-full rounded-md border-(length:--border-width) p-4 bg-primary text-primary-foreground shadow-shadow"
                >
                  Section in a box.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
